--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   </a>
             </div>
             <div class="mat1 mat3 group3">
-                <a href="https://jsbin.com/wikesey" target="_blank">
+                <a href="https://output.jsbin.com/nezoqid" target="_blank">
                     <div class="front">
                         <img src="https://i.imgur.com/0oL75RR.png" alt="박재민">
                     </div>
